# FireFetch

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/firefetch/: __main__.py  _http.py  cli.py  downloader.py  extractor.py  models.py  output.py
src/firefetch/firebase/: _headers.py  auth.py  firestore.py  hosting.py  realtime_db.py  remote_config.py  storage.py  writes.py
tests/: test_auth_and_extras.py  test_extractor.py  test_firebase_probes.py  test_writes.py
