[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firefetch"
version = "0.2.3"
description = "Extract Firebase credentials from Android APKs and probe their backends."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "bitthebyte" }]
keywords = ["android", "apk", "firebase", "security", "recon", "pentest"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.31",
    "curl_cffi>=0.7",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "requests-mock>=1.11",
    "black>=24.0",
    "isort>=5.13",
    "pre-commit>=3.5",
]

[project.scripts]
firefetch = "firefetch.cli:main"

[project.urls]
Homepage = "https://github.com/bitthebyte/firefetch"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
firefetch = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]
